[gd_scene load_steps=16 format=3 uid="uid://bcdnqy5l8jtdf"]

[ext_resource type="Texture2D" uid="uid://d1w57dt7vdrtw" path="res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/Archer_Blue.png" id="1_g3e68"]
[ext_resource type="Script" path="res://Scripts/Knight/Troops/knight_archer_blue.gd" id="1_y3hd6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8oxng"]

[sub_resource type="Animation" id="Animation_6r7x6"]
resource_name = "detected"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DetectedArea/CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.01, 400.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwam6"]
_data = {
"detected": SubResource("Animation_6r7x6")
}

[sub_resource type="Animation" id="Animation_uv14d"]
resource_name = "AttackDown"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [47, 48, 49, 50, 51, 52, 53, 54, 55]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_arrow"
}]
}

[sub_resource type="Animation" id="Animation_cw7sc"]
resource_name = "AttackLeft"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [31, 32, 33, 34, 35, 36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_arrow"
}]
}

[sub_resource type="Animation" id="Animation_1l3v4"]
resource_name = "AttackRight"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [31, 32, 33, 34, 35, 36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_arrow"
}]
}

[sub_resource type="Animation" id="Animation_sr786"]
resource_name = "AttackUp"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_arrow"
}]
}

[sub_resource type="Animation" id="Animation_s8du3"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_qnrrb"]
resource_name = "RunLeft"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_chrap"]
resource_name = "RunRight"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lim23"]
_data = {
"AttackDown": SubResource("Animation_uv14d"),
"AttackLeft": SubResource("Animation_cw7sc"),
"AttackRight": SubResource("Animation_1l3v4"),
"AttackUp": SubResource("Animation_sr786"),
"Idle": SubResource("Animation_s8du3"),
"RunLeft": SubResource("Animation_qnrrb"),
"RunRight": SubResource("Animation_chrap")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_e4ldn"]
radius = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_wgsk7"]
radius = 250.0

[node name="KnightArcherBlue" type="CharacterBody2D"]
script = ExtResource("1_y3hd6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_8oxng")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_g3e68")
hframes = 8
vframes = 7

[node name="ToolAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gwam6")
}
autoplay = "detected"

[node name="VisualAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lim23")
}
autoplay = "Idle"

[node name="DetectedArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectedArea"]
shape = SubResource("CircleShape2D_e4ldn")

[node name="RangeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_wgsk7")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="DetectedArea" to="." method="_on_detected_area_area_entered"]
[connection signal="area_entered" from="RangeArea" to="." method="_on_range_area_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
